--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 <title>Minimal VoIP</title>
 </head>
 <body>
-<h1>Minimal VoIP</h1>
-<button id="callBtn">Start Call</button>
-<audio id="remoteAudio" autoplay></audio>
+  <h1>Minimal VoIP</h1>
+  <button id="callBtn">Start Call</button>
+  <audio id="remoteAudio" autoplay></audio>
+  
+  <div id="log" style="white-space: pre-wrap; border: 1px solid #ccc; padding: 10px; margin-top: 10px; height: 200px; overflow-y: auto;"></div>
 
-<script src="index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
